exports[`Button should be disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 5,
        "justifyContent": "center",
        "marginHorizontal": 16,
        "paddingBottom": 17,
        "paddingTop": 15,
      },
      Object {
        "backgroundColor": "#f77040",
      },
      undefined,
      undefined,
      Array [
        Object {
          "backgroundColor": "#dfe5e6",
        },
        undefined,
      ],
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
        },
        Object {
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_bold",
            "fontSize": 13,
            "fontWeight": "bold",
            "letterSpacing": 1,
          },
          Object {
            "color": "#ffffff",
          },
          undefined,
          Array [
            Object {
              "color": "#ffffff",
            },
            undefined,
          ],
        ],
      ]
    }>
    margle
  </Text>
</View>
`;

exports[`Button should render "inline" layout 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
        },
        undefined,
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            undefined,
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should render "light" theme 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        undefined,
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            Object {
              "color": "#f77040",
            },
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should render "small" size 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        undefined,
        Object {
          "borderRadius": 2,
          "marginHorizontal": 8,
          "paddingBottom": 0,
          "paddingHorizontal": 2,
          "paddingTop": 0,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 11,
            },
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should render "stretch" layout 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        Object {
          "alignSelf": "stretch",
        },
        undefined,
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            undefined,
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should render "transparent" theme 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        undefined,
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#f77040",
          "borderWidth": 1,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            Object {
              "color": "#f77040",
            },
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should render its \`title,\` and map \`onPress\` 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        undefined,
        undefined,
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            undefined,
            undefined,
          ],
        ]
      }>
      margle
    </Text>
  </View>
</TouchableNativeFeedback>
`;

exports[`Button should take any kind of children 1`] = `
<TouchableNativeFeedback
  onPress={[Function]}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "paddingBottom": 17,
          "paddingTop": 15,
        },
        Object {
          "backgroundColor": "#f77040",
        },
        undefined,
        undefined,
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
          },
          Object {
            "fontSize": 13,
            "textAlign": "center",
          },
          Array [
            Object {
              "fontFamily": "Brandon Text_bold",
              "fontSize": 13,
              "fontWeight": "bold",
              "letterSpacing": 1,
            },
            Object {
              "color": "#ffffff",
            },
            undefined,
            undefined,
          ],
        ]
      }>
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 24,
              "width": 24,
            },
            Object {},
          ]
        } />
      I am text.
    </Text>
  </View>
</TouchableNativeFeedback>
`;
